--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -9,6 +9,7 @@ footer {
 
     .logo-nav {
       flex: 1 1 15rem;
+      padding: 0rem 0rem 3rem 0rem;
     }
 
     .footer-ul {
