--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -10,6 +10,12 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  max-width: 1600px;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
 // Global Typography Styles
 
 h1 {
